--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="col-sm-10">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1 class="colorSalmon ptSans w700"> <span class="roboto w700 colorAqua">{</span>niasreg<span class="roboto w700 colorAqua">}</span></h1>
+                            <h1 class="colorSalmon ptSans w700"> <span class="roboto w700 colorAqua">{</span>niasreG<span class="roboto w700 colorAqua">}</span></h1>
                             <p class="roboto colorGrayLight w100 text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias omnis nobis magni repellat laborum odit aperiam Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat laborum saepe dignissimos esse excepturi tempore.</p>
                         </div>
                     </div>
